@startuml

Context o-- AbstractExpression
NonterminalExpression o-- AbstractExpression

interface AbstractExpression {
  +Object interpret(Context)
}

class TerminalExpression implements AbstractExpression {
  +Object interpret(Context)
}

class NonterminalExpression implements AbstractExpression {
  -AbstractExpression exp1
  -AbstractExpression exp2

  +NonterminalExpression(AbstractExpression exp1, AbstractExpression exp2)
  +Object interpret(Context context)
}

class Context {
  -AbstractExpression exp
  
  +setExpression(AbstractExpression exp)
  +Object getValue(AbstractExpression exp)
}

note as N
    public Object interpret(Context context) {
        return exp1.interpreter(context);
    }
end note

NonterminalExpression .. N

@enduml